# alchemist

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_backtest_example.py  run_strategies.py  seed_timescaledb.py  setup.py  strategy_config_example.yaml
alchemist/: account.py  backtester.py  buffer.py  commission.py  constants.py  convertor.py  data_card.py  data_line.py  enums.py  errors.py  logger.py  management_service.py  order.py  position.py  standardized_messages.py  zeromq.py
alchemist/common/: helpers.py
alchemist/data_pipelines/: __init__.py  base_data_pipeline.py  data_pipeline.py  ib_data_pipeline.py  parquet_data_pipeline.py
alchemist/datas/: bar_data.py  base_data.py  common.py  frequency.py  resampler.py  tick_data.py
alchemist/gateways/: __init__.py  base_gateway.py
alchemist/indicators/: atr_indicator.py  base_indicator.py  bollingerband_indicator.py  ema_indicator.py  log_return_indicator.py  open_price_indicator.py  pearson_r_indicator.py  rsi_indicator.py  running_max_indicator.py  sma_indicator.py  std_indicator.py  vwap_indicator.py
alchemist/managers/: backtest_manager.py  data_manager.py  order_manager.py  portfolio_manager.py
alchemist/monitors/: base_monitor.py  dashboard_monitor.py  telegram_monitor.py  timescaledb_monitor.py
alchemist/products/: __init__.py  base_product.py  future_product.py  (+1 more)
tests/: conftest.py  test_compositional_indicator.py  test_data_resampling.py  test_order_life_cycle.py  test_order_validation.py  test_parquet_data_pipeline.py  test_sma_indicator.py
(+41 files in other folders)
